--- a/italy/aboutus.html
+++ b/italy/aboutus.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from themezinho.net/culturaitaliae/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 22 Jun 2024 19:27:08 GMT -->
 
 <head>
   <meta charset="utf-8">
@@ -37,12 +36,12 @@
   <link href="ico/favicon.png" rel="shortcut icon">
 
   <!-- CSS FILES -->
-  <link rel="stylesheet" href="css/fontawesome.min.css">
-  <link rel="stylesheet" href="css/odometer.min.css">
-  <link rel="stylesheet" href="css/fancybox.min.css">
-  <link rel="stylesheet" href="css/swiper.min.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/fontawesome.min.css">
+  <link rel="stylesheet" href="../css/odometer.min.css">
+  <link rel="stylesheet" href="../css/fancybox.min.css">
+  <link rel="stylesheet" href="../css/swiper.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -54,7 +53,7 @@
     </svg>
     <div class="inner">
       <canvas class="progress-bar" id="progress-bar" width="200" height="200"></canvas>
-      <figure><img src="images/preloader.png" alt="Image"></figure>
+      <figure><img src="../images/preloader.png" alt="Image"></figure>
       <small>Loading</small>
     </div>
     <!-- end inner -->
@@ -76,23 +75,23 @@
         <svg viewBox="0 0 600 1080" preserveAspectRatio="none" version="1.1">
           <path d="M540,1080H0V0h540c0,179.85,0,359.7,0,539.54C540,719.7,540,899.85,540,1080z"></path>
         </svg>
-        <figure class="logo"> <img src="images/logo-light.png" alt="Image"> </figure>
+        <figure class="logo"> <img src="../images/logo-light.png" alt="Immagine"> </figure>
         <!-- end logo -->
 
         <!-- end inner -->
         <div class="display-mobile">
           <div class="custom-menu">
             <ul>
-              <li><a href="#">Eng</a></li>
-              <li><a href="italy/aboutus.html">Ita</a></li>
+              <li><a href="../aboutus.html">Eng</a></li>
+              <li><a href="#">Ita</a></li>
             </ul>
           </div>
           <!-- end custom-menu -->
           <div class="site-menu">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="about.html">Chi siamo</a></li>
+              <li><a href="contact.html">Contatti</a></li>
             </ul>
           </div>
           <!-- end site-menu -->
@@ -100,21 +99,21 @@
         <!-- end display-mobile -->
       </aside>
       <nav class="navbar">
-        <div class="logo"> <a href="index-2.html"> <img src="images/logo.png" alt="Image"> </a> </div>
+        <div class="logo"> <a href="index-2.html"> <img src="../images/logo.png" alt="Immagine"> </a> </div>
         <!-- end logo -->
 
         <div class="site-menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="aboutus.html">Chi siamo</a></li>
+            <li><a href="contact.html">Contatti</a></li>
           </ul>
         </div>
 
         <div class="custom-menu">
           <ul>
-            <li><a href="#">Eng</a></li>
-            <li><a href="italy/aboutus.html">Ita</a></li>
+            <li><a href="../aboutus.html">Eng</a></li>
+            <li><a href="#">Ita</a></li>
           </ul>
         </div>
         <!-- end custom-menu -->
@@ -167,30 +166,32 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="container-fluid">
-                <h1>Promoting <br>
-                  Cultural Heritage</h1>
-                <p>Discover initiatives and programs dedicated to preserving and promoting Italy's rich cultural
-                  heritage.</p>
+                <h1>Promozione <br>
+                  del Patrimonio Culturale</h1>
+                <p>Scopri iniziative e programmi dedicati alla conservazione e alla promozione del ricco patrimonio
+                  culturale
+                  italiano.</p>
               </div>
               <!-- end container -->
             </div>
             <!-- end swiper-slide -->
             <div class="swiper-slide">
               <div class="container-fluid">
-                <h1>Supporting <br>
-                  Creative Industries</h1>
-                <p>Learn about our efforts to support creative industries and foster cultural exchange and innovation.
-                </p>
+                <h1>Sostegno alle <br>
+                  Industrie Creative</h1>
+                <p>Scopri i nostri sforzi per sostenere le industrie creative e favorire lo scambio culturale e
+                  l'innovazione.</p>
               </div>
               <!-- end container -->
             </div>
             <!-- end swiper-slide -->
             <div class="swiper-slide">
               <div class="container-fluid">
-                <h1>Engaging <br>
-                  Communities</h1>
-                <p>Our community engagement programs aim to increase cultural awareness and participation across Italy.
-                </p>
+                <h1>Coinvolgimento <br>
+                  delle Comunità</h1>
+                <p>I nostri programmi di coinvolgimento della comunità mirano ad aumentare la consapevolezza culturale e
+                  la
+                  partecipazione in tutta Italia.</p>
               </div>
               <!-- end container -->
             </div>
@@ -201,6 +202,7 @@
         <!-- end slider-texts -->
 
       </header>
+
       <!-- end slider -->
 
       <!-- end content-section -->
@@ -210,45 +212,44 @@
           <div class="row justify-content-center">
             <div class="col-12">
               <div class="section-title text-center">
-                <figure><img src="images/title-shape.png" alt="Image"></figure>
-                <h2>ABOUT US</h2>
+                <figure><img src="../images/title-shape.png" alt="Immagine"></figure>
+                <h2>CHI SIAMO</h2>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="text-content" data-scroll data-scroll-speed="-1">
-                <h6>EXCELLENCE</h6>
-                <p>Cultura Italiae" represents the pinnacle of Italian cultural enhancement, celebrating and preserving
-                  the nation's rich artistic and historical heritage. Through superior quality initiatives, we are
-                  committed to sharing and spreading the best of Italian culture worldwide.
-                </p>
+                <h6>ECCELLENZA</h6>
+                <p>"Cultura Italiae" rappresenta il vertice dell'arricchimento culturale italiano, celebrando e
+                  preservando
+                  il ricco patrimonio artistico e storico della nazione. Attraverso iniziative di qualità superiore, ci
+                  impegniamo a condividere e diffondere il meglio della cultura italiana in tutto il mondo.</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="text-content" data-scroll data-scroll-speed="0.5">
-                <h6>MERIT</h6>
-                <p>At "Cultura Italiae", we recognize and support those who contribute significantly to the development
-                  and promotion of Italian culture. Artists, historians, innovators, educators and young talents. We are
-                  dedicated to honoring and supporting the key figures who cherish and enrich our cultural heritage.
-
-                </p>
+                <h6>MERITO</h6>
+                <p>A "Cultura Italiae", riconosciamo e sosteniamo coloro che contribuiscono in modo significativo allo
+                  sviluppo e
+                  alla promozione della cultura italiana. Artisti, storici, innovatori, educatori e giovani talenti.
+                  Siamo
+                  dedicati a onorare e sostenere le figure chiave che valorizzano e arricchiscono il nostro patrimonio
+                  culturale.</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="text-content" data-scroll data-scroll-speed="1">
-                <h6>INNOVATION</h6>
-                <p>"Cultura Italiae" is committed to adopting innovative approaches to the dissemination and
-                  preservation of Italian culture. We promote research on the most modern technologies, from virtual
-                  reality to digital platforms, to keep our cultural heritage alive and accessible in a constantly
-                  evolving world.
-
-                </p>
+                <h6>INNOVAZIONE</h6>
+                <p>"Cultura Italiae" si impegna ad adottare approcci innovativi per la diffusione e la conservazione
+                  della
+                  cultura italiana. Promuoviamo la ricerca sulle tecnologie più moderne, dalla realtà virtuale alle
+                  piattaforme
+                  digitali, per mantenere vivo e accessibile il nostro patrimonio culturale in un mondo in continua
+                  evoluzione.</p>
               </div>
             </div>
           </div>
         </div>
-
       </section>
-
 
       <!-- end content-section -->
       <footer class="footer">
@@ -265,16 +266,16 @@
   </div>
 
   <!-- JS FILES -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/gsap.min.js"></script>
-  <script src="js/locomotive-scroll.min.js"></script>
-  <script src="js/ScrollTrigger.min.js"></script>
-  <script src="js/kinetic-slider.js"></script>
-  <script src="js/fancybox.min.js"></script>
-  <script src="js/odometer.min.js"></script>
-  <script src="js/swiper.min.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/gsap.min.js"></script>
+  <script src="../js/locomotive-scroll.min.js"></script>
+  <script src="../js/ScrollTrigger.min.js"></script>
+  <script src="../js/kinetic-slider.js"></script>
+  <script src="../js/fancybox.min.js"></script>
+  <script src="../js/odometer.min.js"></script>
+  <script src="../js/swiper.min.js"></script>
+  <script src="../js/scripts.js"></script>
 </body>
 
 
