--- a/italy/contact.html
+++ b/italy/contact.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,13 +35,14 @@
   <link href="ico/favicon.png" rel="shortcut icon">
 
   <!-- CSS FILES -->
-  <link rel="stylesheet" href="css/fontawesome.min.css">
-  <link rel="stylesheet" href="css/odometer.min.css">
-  <link rel="stylesheet" href="css/fancybox.min.css">
-  <link rel="stylesheet" href="css/swiper.min.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/fontawesome.min.css">
+  <link rel="stylesheet" href="../css/odometer.min.css">
+  <link rel="stylesheet" href="../css/fancybox.min.css">
+  <link rel="stylesheet" href="../css/swiper.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
+
 
 
 <body>
@@ -54,7 +54,7 @@
     </svg>
     <div class="inner">
       <canvas class="progress-bar" id="progress-bar" width="200" height="200"></canvas>
-      <figure><img src="images/preloader.png" alt="Image"></figure>
+      <figure><img src="../images/preloader.png" alt="Image"></figure>
       <small>Loading</small>
     </div>
     <!-- end inner -->
@@ -102,14 +102,15 @@
         <svg viewBox="0 0 600 1080" preserveAspectRatio="none" version="1.1">
           <path d="M540,1080H0V0h540c0,179.85,0,359.7,0,539.54C540,719.7,540,899.85,540,1080z"></path>
         </svg>
-        <figure class="logo"> <img src="images/logo-light.png" alt="Image"> </figure>
+        <figure class="logo"> <img src="../images/logo-light.png" alt="Image"> </figure>
         <!-- end logo -->
 
+        <!-- end inner -->
         <div class="display-mobile">
           <div class="custom-menu">
             <ul>
-              <li><a href="#">Eng</a></li>
-              <li><a href="italy/contact.html">Ita</a></li>
+              <li><a href="../contact.html">Eng</a></li>
+              <li><a href="#">Ita</a></li>
             </ul>
           </div>
           <!-- end custom-menu -->
@@ -125,7 +126,7 @@
         <!-- end display-mobile -->
       </aside>
       <nav class="navbar">
-        <div class="logo"> <a href="index-2.html"> <img src="images/logo.png" alt="Image"> </a> </div>
+        <div class="logo"> <a href="index-2.html"> <img src="../images/logo.png" alt="Image"> </a> </div>
         <!-- end logo -->
 
         <div class="site-menu">
@@ -138,8 +139,8 @@
 
         <div class="custom-menu">
           <ul>
-            <li><a href="#">Eng</a></li>
-            <li><a href="italy/contact.html">Ita</a></li>
+            <li><a href="../contact.html">Eng</a></li>
+            <li><a href="#">Ita</a></li>
           </ul>
         </div>
         <!-- end custom-menu -->
@@ -163,77 +164,56 @@
             <path id="svg_morph"
               d="m261,30.4375c0,0 114,6 151,75c37,69 37,174 6,206.5625c-31,32.5625 -138,11.4375 -196,-19.5625c-58,-31 -86,-62 -90,-134.4375c12,-136.5625 92,-126.5625 129,-127.5625z" />
           </svg>
-          <h1>Contact Us</h1>
+          <h1>Contattaci</h1>
         </div>
         <!-- end inner -->
       </header>
       <!-- end page-header -->
+
       <section class="content-section" data-background="#fffbf7">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-12">
               <div class="section-title text-center">
-                <figure><img src="images/title-shape.png" alt="Image"></figure>
-                <h2>Help us to respond to <br>
-                  you more quickly</h2>
+                <figure><img src="../images/title-shape.png" alt="Immagine"></figure>
+                <h2>Aiutaci a risponderti <br> più rapidamente</h2>
               </div>
               <!-- end section-title -->
             </div>
             <!-- end col-12 -->
-            <!-- <div class="col-lg-5">
-              <div class="contact-box">
-                <h6>Main Contact Number</h6>
-                <p>020 3461 4444 (Monday to Friday, 9am to 5pm)</p>
-                <p>Please use this number if you know the name of the person
-                  or department you would like to contact. Or you can fax
-                  020 3461 4771.</p>
-              </div> -->
-            <!-- end contact-box -->
-            <!-- <div class="contact-box">
-                <h6>General enquiries</h6>
-                <p><a href="#">enquiries@wandau.co.uk</a>
-                  020 3461 4878 (Monday to Friday: 10:00 - 17:00).</p>
-              </div> -->
-            <!-- end contact-box -->
-            <!-- <div class="contact-box">
-                <h6>Media enquiries</h6>
-                <p><a href="#">sponsor@wandau.co.uk</a>
-                  The person or department you would like to contact</p>
-              </div> -->
-            <!-- end contact-box -->
-            <!-- </div> -->
-            <!-- end col-5 -->
             <div class="col-lg-12">
               <div class="contact-form">
                 <div class="mb-3">
-                  <input type="text" placeholder="Complete Name">
+                  <input type="text" placeholder="Nome Completo">
                 </div>
                 <!-- end mb-3 -->
                 <div class="mb-3">
-                  <input type="text" placeholder="E-mail Address">
+                  <input type="text" placeholder="Indirizzo E-mail">
                 </div>
                 <!-- end mb-3 -->
                 <div class="mb-3">
-                  <input type="text" placeholder="Phone Number">
+                  <input type="text" placeholder="Numero di Telefono">
                 </div>
                 <!-- end mb-3 -->
                 <div class="mb-3">
-                  <textarea placeholder="Your Message"></textarea>
+                  <textarea placeholder="Il tuo Messaggio"></textarea>
                 </div>
                 <!-- end mb-3 -->
                 <div class="mb-3">
-                  <input type="submit" value="Send Us">
+                  <input type="submit" value="Invia">
                 </div>
                 <!-- end mb-3 -->
               </div>
               <!-- end contact-form -->
             </div>
-            <!-- end col-5 -->
+            <!-- end col-12 -->
           </div>
           <!-- end row -->
         </div>
         <!-- end container -->
       </section>
+      <!-- end content-section -->
+
       <!-- end content-section -->
       <!-- <div class="google-maps">
         <iframe
@@ -256,16 +236,16 @@
   </div>
 
   <!-- JS FILES -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/gsap.min.js"></script>
-  <script src="js/locomotive-scroll.min.js"></script>
-  <script src="js/ScrollTrigger.min.js"></script>
-  <script src="js/kinetic-slider.js"></script>
-  <script src="js/fancybox.min.js"></script>
-  <script src="js/odometer.min.js"></script>
-  <script src="js/swiper.min.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/gsap.min.js"></script>
+  <script src="../js/locomotive-scroll.min.js"></script>
+  <script src="../js/ScrollTrigger.min.js"></script>
+  <script src="../js/kinetic-slider.js"></script>
+  <script src="../js/fancybox.min.js"></script>
+  <script src="../js/odometer.min.js"></script>
+  <script src="../js/swiper.min.js"></script>
+  <script src="../js/scripts.js"></script>
 </body>
 
 
