--- a/aboutus.html
+++ b/aboutus.html
@@ -91,7 +91,7 @@
           <div class="site-menu">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="aboutus.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
